--- a/src/iOS_Lang/en-CA.lproj/Localizable.strings
+++ b/src/iOS_Lang/en-CA.lproj/Localizable.strings
@@ -1,11 +1,8 @@
 /* No comment provided by engineer. */
-" and wait" = " and wait";
-
-/* No comment provided by engineer. */
 "A message with the same name already exists, try again." = "A message with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
-"A program with the same name already exists, try again." = "A program with the same name already exists, try again.";
+"A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
 "About Catrobat" = "About Catrobat";
@@ -26,7 +23,7 @@
 "acceleration_z" = "acceleration_z";
 
 /* No comment provided by engineer. */
-"Add %@ to list\n%@" = "Add %@ to list\n%@";
+"Add" = "Add";
 
 /* No comment provided by engineer. */
 "add comment here..." = "add comment here...";
@@ -71,6 +68,9 @@
 "and" = "and";
 
 /* No comment provided by engineer. */
+"and wait" = "and wait";
+
+/* No comment provided by engineer. */
 "Animate Brick-Parts" = "Animate Brick-Parts";
 
 /* No comment provided by engineer. */
@@ -90,6 +90,9 @@
 
 /* No comment provided by engineer. */
 "at " = "at ";
+
+/* No comment provided by engineer. */
+"at position" = "at position";
 
 /* paint */
 "Attributes:" = "Attributes:";
@@ -161,16 +164,16 @@
 "by" = "by";
 
 /* No comment provided by engineer. */
-"By registering you agree to our" = "By registering, you agree to our";
+"By registering you agree to our" = "By registering you agree to our";
 
 /* No comment provided by engineer. */
-"By switching to the section \"Explore\" you can discover more interesting programs from people all over the world." = "By switching to the section \"Explore\" you can discover more interesting programs from people all over the world.";
+"By switching to the section \"Explore\" you can discover more interesting projects from people all over the world." = "By switching to the section \"Explore\" you can discover more interesting projects from people all over the world.";
 
 /* No comment provided by engineer. */
 "Camera Roll" = "Camera Roll";
 
 /* No comment provided by engineer. */
-"Can't restart program!" = "Can't restart program!";
+"Can't restart project!" = "Can't restart project!";
 
 /* No comment provided by engineer. */
 "Cancel" = "Cancel";
@@ -227,9 +230,6 @@
 "Choose image" = "Choose image";
 
 /* No comment provided by engineer. */
-"Choose sound" = "Choose sound";
-
-/* No comment provided by engineer. */
 "Clear graphic effects" = "Clear graphic effects";
 
 /* No comment provided by engineer. */
@@ -239,7 +239,7 @@
 "Close Paint" = "Close Paint";
 
 /* No comment provided by engineer. */
-"color" = "color";
+"color" = "colour";
 
 /* No comment provided by engineer. */
 "compass" = "compass";
@@ -278,7 +278,7 @@
 "Control" = "Control";
 
 /* No comment provided by engineer. */
-"Copy" = "copy";
+"Copy" = "Copy";
 
 /* No comment provided by engineer. */
 "Copy Brick" = "Copy Brick";
@@ -287,7 +287,7 @@
 "Copy Looks" = "Copy Looks";
 
 /* No comment provided by engineer. */
-"Copy program" = "Copy program";
+"Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
 "Create & Remix" = "Create & Remix";
@@ -311,7 +311,7 @@
 "degrees" = "degrees";
 
 /* No comment provided by engineer. */
-"Delete" = "delete";
+"Delete" = "Delete";
 
 /* No comment provided by engineer. */
 "Delete Backgrounds" = "Delete Backgrounds";
@@ -323,7 +323,7 @@
 "Delete Condition" = "Delete Condition";
 
 /* No comment provided by engineer. */
-"Delete item from list\n%@\n at position%@" = "Delete item from list\n%@\n at position%@";
+"Delete item from list" = "Delete item from list";
 
 /* No comment provided by engineer. */
 "Delete Looks" = "Delete Looks";
@@ -335,10 +335,10 @@
 "Delete Objects" = "Delete Objects";
 
 /* No comment provided by engineer. */
-"Delete Program" = "Delete Program";
+"Delete Project" = "Delete Project";
 
 /* No comment provided by engineer. */
-"Delete Programs" = "Delete Programs";
+"Delete Projects" = "Delete Projects";
 
 /* No comment provided by engineer. */
 "Delete Script" = "Delete Script";
@@ -377,7 +377,7 @@
 "Delete this object" = "Delete this object";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Delete this program";
+"Delete this project" = "Delete this project";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Delete this script?";
@@ -458,10 +458,10 @@
 "Edit Object" = "Edit Object";
 
 /* No comment provided by engineer. */
-"Edit Program" = "Edit Program";
+"Edit Project" = "Edit Project";
 
 /* No comment provided by engineer. */
-"Edit Programs" = "Edit Programs";
+"Edit Projects" = "Edit Projects";
 
 /* Action sheet menu title */
 "Edit Script" = "Edit Script";
@@ -485,6 +485,9 @@
 "Email" = "Email";
 
 /* No comment provided by engineer. */
+"Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
 "End If" = "End If";
 
 /* No comment provided by engineer. */
@@ -505,11 +508,11 @@
 /* Placeholder for add object-name input field */
 "Enter your object name here..." = "Enter your object name here...";
 
-/* Placeholder for program-description input field */
-"Enter your program description here..." = "Enter your program description here...";
+/* Placeholder for project-description input field */
+"Enter your project description here..." = "Enter your project description here...";
 
-/* Placeholder for program-name input field */
-"Enter your program name here..." = "Enter your program name here...";
+/* Placeholder for project-name input field */
+"Enter your project name here..." = "Enter your project name here...";
 
 /* Placeholder for add sound-name input field */
 "Enter your sound name here..." = "Enter your sound name here...";
@@ -522,6 +525,9 @@
 
 /* No comment provided by engineer. */
 "Error" = "Error";
+
+/* No comment provided by engineer. */
+"Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Explore" = "Explore";
@@ -548,10 +554,10 @@
 "Failed to import item" = "Failed to import item";
 
 /* No comment provided by engineer. */
-"Failed to load featured programs" = "Failed to load featured programs";
+"Failed to load featured projects" = "Failed to load featured projects";
 
 /* No comment provided by engineer. */
-"Failed to load recent programs" = "Failed to load recent programs";
+"Failed to load recent projects" = "Failed to load recent projects";
 
 /* No comment provided by engineer. */
 "Failed to load sound" = "Failed to load sound";
@@ -563,7 +569,7 @@
 "false" = "false";
 
 /* No comment provided by engineer. */
-"Featured Programs" = "Featured Programs";
+"Featured Projects" = "Featured Projects";
 
 /* No comment provided by engineer. */
 "Feb" = "Feb";
@@ -582,6 +588,9 @@
 
 /* No comment provided by engineer. */
 "floor" = "floor";
+
+/* No comment provided by engineer. */
+"Following features used in this project are not compatible with this version of Pocket Code:" = "Following features used in this project are not compatible with this version of Pocket Code:";
 
 /* No comment provided by engineer. */
 "for" = "for";
@@ -627,9 +636,6 @@
 
 /* No comment provided by engineer. */
 "Go to front" = "Go to front";
-
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "GOOD TO SEE YOU";
 
 /* paint */
 "Green" = "Green";
@@ -689,16 +695,22 @@
 "Information" = "Information";
 
 /* No comment provided by engineer. */
-"Insert%@into list\n%@\n at position%@" = "Insert%@into list\n%@\n at position%@";
+"Insert" = "Insert";
 
 /* paint */
 "Inserted" = "Inserted";
+
+/* No comment provided by engineer. */
+"into list" = "into list";
 
 /* No comment provided by engineer. */
 "Invalid input entered, try again." = "Invalid input entered, try again.";
 
 /* No comment provided by engineer. */
 "Invalid URL given!" = "Invalid URL given!";
+
+/* No comment provided by engineer. */
+"iOS." = "iOS.";
 
 /* No comment provided by engineer. */
 "is true" = "is true";
@@ -865,7 +877,7 @@
 /* No comment provided by engineer. */
 "Mo" = "Mo";
 
-/* Prefix of default catrobat program object names (except background object) */
+/* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
 
 /* No comment provided by engineer. */
@@ -876,6 +888,9 @@
 
 /* No comment provided by engineer. */
 "More" = "More";
+
+/* No comment provided by engineer. */
+"More information" = "More information";
 
 /* No comment provided by engineer. */
 "Most Downloaded" = "Most downloaded";
@@ -907,8 +922,8 @@
 /* No comment provided by engineer. */
 "Move Sounds" = "Move Sounds";
 
-/* Name of the default catrobat program (used as filename!!) */
-"My first program" = "My first program";
+/* Name of the default catrobat project (used as filename!!) */
+"My first project" = "My first project";
 
 /* Default title of imported photo from camera (taken by camera) */
 "My Image" = "My Image";
@@ -935,7 +950,7 @@
 "New Message" = "New Message";
 
 /* No comment provided by engineer. */
-"New Program" = "New program";
+"New Project" = "New Project";
 
 /* No comment provided by engineer. */
 "New Text" = "New Text";
@@ -964,9 +979,6 @@
 /* No comment provided by engineer. */
 "No Description available" = "No Description available";
 
-/* Title of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"No imported sounds found" = "No imported sounds found";
-
 /* No comment provided by engineer. */
 "No input. Please enter at least %lu character(s)." = "No input. Please enter at least %lu character(s).";
 
@@ -992,7 +1004,7 @@
 "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data." = "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data.";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your programs" = "Not enough free memory to download this program. Please delete some of your programs";
+"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Not enough Memory";
@@ -1055,6 +1067,9 @@
 "Only special characters are not allowed. Please enter at least %lu other character(s)." = "Only special characters are not allowed. Please enter at least %lu other character(s).";
 
 /* No comment provided by engineer. */
+"Open" = "Open";
+
+/* No comment provided by engineer. */
 "or" = "or";
 
 /* No comment provided by engineer. */
@@ -1094,28 +1109,22 @@
 "Place at " = "Place at ";
 
 /* No comment provided by engineer. */
-"Play" = "Play";
-
-/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
-/* Description of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"Please connect your iPhone to your PC/Mac and use iTunes FileSharing to import sound files into the PocketCode app." = "Please connect your iPhone to your PC/Mac and use iTunes FileSharing to import sound files into the PocketCode app.";
-
 /* paint */
 "Please enter a text!" = "Please enter a text!";
 
 /* No comment provided by engineer. */
-"Please log in to report this program as inappropriate" = "Please log in to report this program as inappropriate";
+"Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
 
 /* paint */
 "Please pick a tool" = "Please pick a tool";
 
 /* No comment provided by engineer. */
-"Please select a program to upload" = "Please select a program to upload";
+"Please select a project to upload" = "Please select a project to upload";
 
 /* bluetooth */
 "Please try resetting the device and try again." = "Please try resetting the device and try again.";
@@ -1169,6 +1178,9 @@
 "position_y" = "position_y";
 
 /* No comment provided by engineer. */
+"Preview" = "Preview";
+
+/* No comment provided by engineer. */
 "Previous background" = "Previous background";
 
 /* No comment provided by engineer. */
@@ -1178,37 +1190,31 @@
 "Privacy Settings" = "Privacy Settings";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your program" = "Problems occured while Uploading your program";
-
-/* No comment provided by engineer. */
-"Program" = "Program";
-
-/* No comment provided by engineer. */
-"Program lists:" = "Program lists:";
-
-/* No comment provided by engineer. */
-"Program name" = "Program name:";
-
-/* No comment provided by engineer. */
-"Program Name is necessary!" = "Program Name is necessary!";
-
-/* No comment provided by engineer. */
-"Program variables:" = "Program variables:";
-
-/* No comment provided by engineer. */
-"Programs" = "Programs";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Project";
+
+/* No comment provided by engineer. */
+"Project lists:" = "Project lists:";
+
+/* No comment provided by engineer. */
+"Project name" = "Project name";
+
+/* No comment provided by engineer. */
+"Project Name is necessary!" = "Project Name is necessary!";
+
+/* No comment provided by engineer. */
+"Project variables:" = "Project variables:";
+
+/* No comment provided by engineer. */
+"Projects" = "Projects";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
 
 /* No comment provided by engineer. */
 "RE" = "RE";
-
-/* No comment provided by engineer. */
-"Record" = "Record";
 
 /* No comment provided by engineer. */
 "Recording" = "Recording";
@@ -1238,7 +1244,7 @@
 "Rename object" = "Rename object";
 
 /* No comment provided by engineer. */
-"Rename Program" = "Rename program";
+"Rename Project" = "Rename Project";
 
 /* No comment provided by engineer. */
 "Rename sound" = "Rename sound";
@@ -1250,7 +1256,7 @@
 "Repeat until" = "Repeat until";
 
 /* No comment provided by engineer. */
-"Replace item in list\n%@\nat position %@ with %@" = "Replace item in list\n%@\nat position %@ with %@";
+"Replace item in list" = "Replace item in list";
 
 /* No comment provided by engineer. */
 "Report as inappropriate" = "Report as inappropriate";
@@ -1279,9 +1285,6 @@
 /* No comment provided by engineer. */
 "Saturday" = "Saturday";
 
-/* Action sheet menu title */
-"Save Screenshot to" = "Save Screenshot to";
-
 /* paint */
 "Save to CameraRoll" = "Save to CameraRoll";
 
@@ -1302,15 +1305,6 @@
 
 /* No comment provided by engineer. */
 "screen_touch_y" = "screen_touch_y";
-
-/* No comment provided by engineer. */
-"Screenshot" = "Screenshot";
-
-/* No comment provided by engineer. */
-"Screenshot saved to Camera Roll" = "Screenshot saved to Camera Roll";
-
-/* No comment provided by engineer. */
-"Screenshot saved to project" = "Screenshot saved to project";
 
 /* No comment provided by engineer. */
 "Script" = "Script";
@@ -1466,9 +1460,6 @@
 "steps" = "steps";
 
 /* No comment provided by engineer. */
-"Stop" = "Stop";
-
-/* No comment provided by engineer. */
 "Stop all sounds" = "Stop all sounds";
 
 /* No comment provided by engineer. */
@@ -1508,7 +1499,7 @@
 "The description contains invalid characters, try again." = "The description contains invalid characters, try again.";
 
 /* No comment provided by engineer. */
-"The featured programs cannot be loaded" = "The featured programs cannot be loaded";
+"The featured projects cannot be loaded" = "The featured projects cannot be loaded";
 
 /* No comment provided by engineer. */
 "The following item could not be imported from the Media Library:" = "The following item could not be imported from the Media Library:";
@@ -1520,10 +1511,13 @@
 "The name contains blocked characters. Please try again!" = "The name contains blocked characters. Please try again!";
 
 /* No comment provided by engineer. */
-"The recent programs cannot be loaded" = "The recent programs cannot be loaded";
+"The recent projects cannot be loaded" = "The recent projects cannot be loaded";
 
 /* No comment provided by engineer. */
-"The requested program can not be found. Please choose a different one." = "The requested program can not be found. Please choose a different one.";
+"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
+
+/* No comment provided by engineer. */
+"The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
 
 /* No comment provided by engineer. */
 "The sound item cannot be loaded" = "The sound item cannot be loaded";
@@ -1559,6 +1553,9 @@
 "to" = "to";
 
 /* No comment provided by engineer. */
+"to list" = "to list";
+
+/* No comment provided by engineer. */
 "to X:" = "to X:";
 
 /* No comment provided by engineer. */
@@ -1589,7 +1586,7 @@
 "Turn right" = "Turn right";
 
 /* No comment provided by engineer. */
-"Unable to load program!" = "Unable to load program!";
+"Unable to load project!" = "Unable to load project!";
 
 /* No comment provided by engineer. */
 "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt." = "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt.";
@@ -1625,13 +1622,22 @@
 "Unselect All" = "Unselect All";
 
 /* No comment provided by engineer. */
+"Unsupported Brick:" = "Unsupported Brick:";
+
+/* No comment provided by engineer. */
+"Unsupported Elements" = "Unsupported Elements";
+
+/* No comment provided by engineer. */
+"Unsupported Script:" = "Unsupported Script:";
+
+/* No comment provided by engineer. */
 "Upload" = "Upload";
 
 /* No comment provided by engineer. */
-"Upload Program" = "Upload Program";
+"Upload Project" = "Upload Project";
 
 /* No comment provided by engineer. */
-"Upload Selected Program" = "Upload Selected Program";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Upload successful";
@@ -1653,9 +1659,6 @@
 
 /* No comment provided by engineer. */
 "Username must not be blank" = "Username must not be blank";
-
-/* No comment provided by engineer. */
-"v" = "v";
 
 /* No comment provided by engineer. */
 "Var/List" = "Var/List";
@@ -1691,6 +1694,9 @@
 "Wait" = "Wait";
 
 /* No comment provided by engineer. */
+"Wait until" = "Wait until";
+
+/* No comment provided by engineer. */
 "We" = "We";
 
 /* No comment provided by engineer. */
@@ -1703,7 +1709,10 @@
 "Welcome to Pocket Code" = "Welcome to Pocket Code";
 
 /* No comment provided by engineer. */
-"When program started" = "When program started";
+"When project started" = "When project started";
+
+/* No comment provided by engineer. */
+"When screen is touched" = "When screen is touched";
 
 /* No comment provided by engineer. */
 "When tapped" = "When tapped";
@@ -1713,6 +1722,9 @@
 
 /* paint */
 "Width selection" = "Width selection";
+
+/* No comment provided by engineer. */
+"with" = "with";
 
 /* No comment provided by engineer. */
 "X: " = "X: ";
@@ -1733,7 +1745,7 @@
 "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "You have already downloaded this program!";
+"You have already downloaded this project!" = "You have already downloaded this project!";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Your email seems to be invalid";
