--- a/src/iOS_Lang/pt-BR.lproj/Localizable.strings
+++ b/src/iOS_Lang/pt-BR.lproj/Localizable.strings
@@ -1,11 +1,8 @@
 /* No comment provided by engineer. */
-" and wait" = " and wait";
-
-/* No comment provided by engineer. */
 "A message with the same name already exists, try again." = "Uma mensagem com o mesmo nome já existe, tente novamente.";
 
 /* No comment provided by engineer. */
-"A program with the same name already exists, try again." = "Um programa com o mesmo nome já existe, tente novamente.";
+"A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
 "About Catrobat" = "Sobre o Catrobat";
@@ -26,7 +23,7 @@
 "acceleration_z" = "aceleração_z";
 
 /* No comment provided by engineer. */
-"Add %@ to list\n%@" = "Add %@ to list\n%@";
+"Add" = "Adicionar";
 
 /* No comment provided by engineer. */
 "add comment here..." = "adicione um comentário aqui...";
@@ -71,6 +68,9 @@
 "and" = "e";
 
 /* No comment provided by engineer. */
+"and wait" = "and wait";
+
+/* No comment provided by engineer. */
 "Animate Brick-Parts" = "Animar as peças de Blocos";
 
 /* No comment provided by engineer. */
@@ -90,6 +90,9 @@
 
 /* No comment provided by engineer. */
 "at " = "em ";
+
+/* No comment provided by engineer. */
+"at position" = "na posição";
 
 /* paint */
 "Attributes:" = "Atributos:";
@@ -164,13 +167,13 @@
 "By registering you agree to our" = "Ao registrar-se, você concorda com nossos";
 
 /* No comment provided by engineer. */
-"By switching to the section \"Explore\" you can discover more interesting programs from people all over the world." = "Se passar para a secção «Explorar» poderá descobrir mais programas interessantes de gente de todo o mundo.";
+"By switching to the section \"Explore\" you can discover more interesting projects from people all over the world." = "By switching to the section \"Explore\" you can discover more interesting projects from people all over the world.";
 
 /* No comment provided by engineer. */
 "Camera Roll" = "Camera Roll";
 
 /* No comment provided by engineer. */
-"Can't restart program!" = "Não é possível reiniciar o programa!";
+"Can't restart project!" = "Can't restart project!";
 
 /* No comment provided by engineer. */
 "Cancel" = "Cancelar";
@@ -225,9 +228,6 @@
 
 /* No comment provided by engineer. */
 "Choose image" = "Selecionar Imagem";
-
-/* No comment provided by engineer. */
-"Choose sound" = "Selecionar som";
 
 /* No comment provided by engineer. */
 "Clear graphic effects" = "Limpar efeitos gráficos";
@@ -287,7 +287,7 @@
 "Copy Looks" = "Copiar Aparência";
 
 /* No comment provided by engineer. */
-"Copy program" = "Programa de cópia";
+"Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
 "Create & Remix" = "Criar & Remisturar";
@@ -323,7 +323,7 @@
 "Delete Condition" = "Apagar Condição";
 
 /* No comment provided by engineer. */
-"Delete item from list\n%@\n at position%@" = "Delete item from list\n%@\n at position%@";
+"Delete item from list" = "Apagar item da lista";
 
 /* No comment provided by engineer. */
 "Delete Looks" = "Apagar Aparências";
@@ -335,10 +335,10 @@
 "Delete Objects" = "Apagar Objetos";
 
 /* No comment provided by engineer. */
-"Delete Program" = "Apagar Programa";
+"Delete Project" = "Delete Project";
 
 /* No comment provided by engineer. */
-"Delete Programs" = "Apagar Programas";
+"Delete Projects" = "Delete Projects";
 
 /* No comment provided by engineer. */
 "Delete Script" = "Apagar Script";
@@ -377,7 +377,7 @@
 "Delete this object" = "Apagar este objeto";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Apagar este programa";
+"Delete this project" = "Delete this project";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Apagar este script?";
@@ -458,10 +458,10 @@
 "Edit Object" = "Editar Objeto";
 
 /* No comment provided by engineer. */
-"Edit Program" = "Editar Programa";
+"Edit Project" = "Edit Project";
 
 /* No comment provided by engineer. */
-"Edit Programs" = "Editar Programas";
+"Edit Projects" = "Edit Projects";
 
 /* Action sheet menu title */
 "Edit Script" = "Editar Guião";
@@ -485,6 +485,9 @@
 "Email" = "E-Mail";
 
 /* No comment provided by engineer. */
+"Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
 "End If" = "Fim Se";
 
 /* No comment provided by engineer. */
@@ -505,11 +508,11 @@
 /* Placeholder for add object-name input field */
 "Enter your object name here..." = "Insira o nome de seu objeto aqui...";
 
-/* Placeholder for program-description input field */
-"Enter your program description here..." = "Insira a descrição do seu programa aqui...";
+/* Placeholder for project-description input field */
+"Enter your project description here..." = "Enter your project description here...";
 
-/* Placeholder for program-name input field */
-"Enter your program name here..." = "Insira o nome de seu programa aqui...";
+/* Placeholder for project-name input field */
+"Enter your project name here..." = "Enter your project name here...";
 
 /* Placeholder for add sound-name input field */
 "Enter your sound name here..." = "Insira o nome de seu som aqui...";
@@ -522,6 +525,9 @@
 
 /* No comment provided by engineer. */
 "Error" = "Erro";
+
+/* No comment provided by engineer. */
+"Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Explore" = "Explorar";
@@ -548,10 +554,10 @@
 "Failed to import item" = "Failed to import item";
 
 /* No comment provided by engineer. */
-"Failed to load featured programs" = "Failed to load featured programs";
+"Failed to load featured projects" = "Failed to load featured projects";
 
 /* No comment provided by engineer. */
-"Failed to load recent programs" = "Failed to load recent programs";
+"Failed to load recent projects" = "Failed to load recent projects";
 
 /* No comment provided by engineer. */
 "Failed to load sound" = "Failed to load sound";
@@ -563,7 +569,7 @@
 "false" = "falso";
 
 /* No comment provided by engineer. */
-"Featured Programs" = "Programas recomendados";
+"Featured Projects" = "Featured Projects";
 
 /* No comment provided by engineer. */
 "Feb" = "Fev";
@@ -582,6 +588,9 @@
 
 /* No comment provided by engineer. */
 "floor" = "piso";
+
+/* No comment provided by engineer. */
+"Following features used in this project are not compatible with this version of Pocket Code:" = "Following features used in this project are not compatible with this version of Pocket Code:";
 
 /* No comment provided by engineer. */
 "for" = "durante";
@@ -627,9 +636,6 @@
 
 /* No comment provided by engineer. */
 "Go to front" = "Ir para a frente";
-
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "BOM TE VER";
 
 /* paint */
 "Green" = "Verde";
@@ -689,16 +695,22 @@
 "Information" = "Informação";
 
 /* No comment provided by engineer. */
-"Insert%@into list\n%@\n at position%@" = "Insert%@into list\n%@\n at position%@";
+"Insert" = "Inserir";
 
 /* paint */
 "Inserted" = "Inserido";
+
+/* No comment provided by engineer. */
+"into list" = "na lista";
 
 /* No comment provided by engineer. */
 "Invalid input entered, try again." = "Entrada inválida. Tente novamente.";
 
 /* No comment provided by engineer. */
 "Invalid URL given!" = "URL inválida!";
+
+/* No comment provided by engineer. */
+"iOS." = "iOS.";
 
 /* No comment provided by engineer. */
 "is true" = "is true";
@@ -865,7 +877,7 @@
 /* No comment provided by engineer. */
 "Mo" = "Seg";
 
-/* Prefix of default catrobat program object names (except background object) */
+/* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Toupeira";
 
 /* No comment provided by engineer. */
@@ -876,6 +888,9 @@
 
 /* No comment provided by engineer. */
 "More" = "Mais";
+
+/* No comment provided by engineer. */
+"More information" = "More information";
 
 /* No comment provided by engineer. */
 "Most Downloaded" = "Mais Baixados";
@@ -907,8 +922,8 @@
 /* No comment provided by engineer. */
 "Move Sounds" = "Mover Sons";
 
-/* Name of the default catrobat program (used as filename!!) */
-"My first program" = "Meu primeiro programa";
+/* Name of the default catrobat project (used as filename!!) */
+"My first project" = "My first project";
 
 /* Default title of imported photo from camera (taken by camera) */
 "My Image" = "Minha Imagem";
@@ -935,7 +950,7 @@
 "New Message" = "Nova Mensagem";
 
 /* No comment provided by engineer. */
-"New Program" = "Novo Programa";
+"New Project" = "New Project";
 
 /* No comment provided by engineer. */
 "New Text" = "Novo Texto";
@@ -964,9 +979,6 @@
 /* No comment provided by engineer. */
 "No Description available" = "Sem descrição disponível";
 
-/* Title of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"No imported sounds found" = "Não há sons importados encontrados";
-
 /* No comment provided by engineer. */
 "No input. Please enter at least %lu character(s)." = "Nenhuma entrada. Por favor introduza pelo menos %lu caracter(es).";
 
@@ -992,7 +1004,7 @@
 "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data." = "Não está ligado a uma rede WiFi; por favor ligue a uma rede ou altere as configurações para também poder descarregar usando dados móveis.";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your programs" = "Não há memória livre suficiente para fazer o download deste programa. Por favor, exclua alguns dos seus programas";
+"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Não há memória suficiente";
@@ -1055,6 +1067,9 @@
 "Only special characters are not allowed. Please enter at least %lu other character(s)." = "Só não são permitidos caracteres especiais. Por favor introduza pelo menos mais %lu caracter(es).";
 
 /* No comment provided by engineer. */
+"Open" = "Abrir";
+
+/* No comment provided by engineer. */
 "or" = "ou";
 
 /* No comment provided by engineer. */
@@ -1094,28 +1109,22 @@
 "Place at " = "Colocar em ";
 
 /* No comment provided by engineer. */
-"Play" = "Reproduzir";
-
-/* No comment provided by engineer. */
 "Play Phiro music\n" = "Reproduzir música Phiro\n";
 
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
-/* Description of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"Please connect your iPhone to your PC/Mac and use iTunes FileSharing to import sound files into the PocketCode app." = "Por favor conecte seu iPhone ao seu PC/Mac e utilize o iTunes FileSharing para importar arquivos de som para o app PocketCode.";
-
 /* paint */
 "Please enter a text!" = "Por favor introduza texto!";
 
 /* No comment provided by engineer. */
-"Please log in to report this program as inappropriate" = "Por favor autentique-se para reportar este programa como desapropriado";
+"Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
 
 /* paint */
 "Please pick a tool" = "Por favor escolha uma ferramenta";
 
 /* No comment provided by engineer. */
-"Please select a program to upload" = "Por favor, selecione um programa para fazer o upload";
+"Please select a project to upload" = "Please select a project to upload";
 
 /* bluetooth */
 "Please try resetting the device and try again." = "Por favor experimente reiniciar o dispositivo e tente de novo.";
@@ -1169,6 +1178,9 @@
 "position_y" = "posição_y";
 
 /* No comment provided by engineer. */
+"Preview" = "Pré visualizar";
+
+/* No comment provided by engineer. */
 "Previous background" = "Previous background";
 
 /* No comment provided by engineer. */
@@ -1178,37 +1190,31 @@
 "Privacy Settings" = "Configurações de Privacidade";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your program" = "Ocorreram problemas ao carregar seu programa";
-
-/* No comment provided by engineer. */
-"Program" = "Program";
-
-/* No comment provided by engineer. */
-"Program lists:" = "Program lists:";
-
-/* No comment provided by engineer. */
-"Program name" = "Nome do programa";
-
-/* No comment provided by engineer. */
-"Program Name is necessary!" = "Nome do programa é necessário!";
-
-/* No comment provided by engineer. */
-"Program variables:" = "Variáveis do programa:";
-
-/* No comment provided by engineer. */
-"Programs" = "Programas";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Projeto";
+
+/* No comment provided by engineer. */
+"Project lists:" = "Project lists:";
+
+/* No comment provided by engineer. */
+"Project name" = "Project name";
+
+/* No comment provided by engineer. */
+"Project Name is necessary!" = "Project Name is necessary!";
+
+/* No comment provided by engineer. */
+"Project variables:" = "Project variables:";
+
+/* No comment provided by engineer. */
+"Projects" = "Projects";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Avalie-nos";
 
 /* No comment provided by engineer. */
 "RE" = "Ré";
-
-/* No comment provided by engineer. */
-"Record" = "Gravar";
 
 /* No comment provided by engineer. */
 "Recording" = "Gravando";
@@ -1238,7 +1244,7 @@
 "Rename object" = "Renomear Objeto";
 
 /* No comment provided by engineer. */
-"Rename Program" = "Renomear o programa";
+"Rename Project" = "Rename Project";
 
 /* No comment provided by engineer. */
 "Rename sound" = "Renomear Som";
@@ -1250,7 +1256,7 @@
 "Repeat until" = "Repetir até";
 
 /* No comment provided by engineer. */
-"Replace item in list\n%@\nat position %@ with %@" = "Replace item in list\n%@\nat position %@ with %@";
+"Replace item in list" = "Substituir item na lista";
 
 /* No comment provided by engineer. */
 "Report as inappropriate" = "Reportar como impróprio";
@@ -1279,9 +1285,6 @@
 /* No comment provided by engineer. */
 "Saturday" = "Sábado";
 
-/* Action sheet menu title */
-"Save Screenshot to" = "Salvar imagem de tela para";
-
 /* paint */
 "Save to CameraRoll" = "Salvar em CameraRoll";
 
@@ -1302,15 +1305,6 @@
 
 /* No comment provided by engineer. */
 "screen_touch_y" = "screen_touch_y";
-
-/* No comment provided by engineer. */
-"Screenshot" = "Captura de tela";
-
-/* No comment provided by engineer. */
-"Screenshot saved to Camera Roll" = "Imagem de tela salva em Camera Roll";
-
-/* No comment provided by engineer. */
-"Screenshot saved to project" = "Imagem de tela salva para projeto";
 
 /* No comment provided by engineer. */
 "Script" = "Script";
@@ -1466,9 +1460,6 @@
 "steps" = "passos";
 
 /* No comment provided by engineer. */
-"Stop" = "Parar";
-
-/* No comment provided by engineer. */
 "Stop all sounds" = "Parar todos os sons";
 
 /* No comment provided by engineer. */
@@ -1508,7 +1499,7 @@
 "The description contains invalid characters, try again." = "A descrição contém caracteres inválidos, tente novamente.";
 
 /* No comment provided by engineer. */
-"The featured programs cannot be loaded" = "The featured programs cannot be loaded";
+"The featured projects cannot be loaded" = "The featured projects cannot be loaded";
 
 /* No comment provided by engineer. */
 "The following item could not be imported from the Media Library:" = "The following item could not be imported from the Media Library:";
@@ -1520,10 +1511,13 @@
 "The name contains blocked characters. Please try again!" = "O nome contém caracteres proibidos. Por favor tente de novo!";
 
 /* No comment provided by engineer. */
-"The recent programs cannot be loaded" = "The recent programs cannot be loaded";
+"The recent projects cannot be loaded" = "The recent projects cannot be loaded";
 
 /* No comment provided by engineer. */
-"The requested program can not be found. Please choose a different one." = "The requested program can not be found. Please choose a different one.";
+"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
+
+/* No comment provided by engineer. */
+"The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
 
 /* No comment provided by engineer. */
 "The sound item cannot be loaded" = "The sound item cannot be loaded";
@@ -1559,6 +1553,9 @@
 "to" = "para";
 
 /* No comment provided by engineer. */
+"to list" = "à lista";
+
+/* No comment provided by engineer. */
 "to X:" = "para X:";
 
 /* No comment provided by engineer. */
@@ -1589,7 +1586,7 @@
 "Turn right" = "Virar à direita";
 
 /* No comment provided by engineer. */
-"Unable to load program!" = "Não é possível carregar o programa!";
+"Unable to load project!" = "Unable to load project!";
 
 /* No comment provided by engineer. */
 "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt." = "Não é possível reproduzir esse som! \nTalvez não seja um som valido ou o ficheiro está corrompido.";
@@ -1625,13 +1622,22 @@
 "Unselect All" = "Desmarcar tudo";
 
 /* No comment provided by engineer. */
+"Unsupported Brick:" = "Unsupported Brick:";
+
+/* No comment provided by engineer. */
+"Unsupported Elements" = "Unsupported Elements";
+
+/* No comment provided by engineer. */
+"Unsupported Script:" = "Unsupported Script:";
+
+/* No comment provided by engineer. */
 "Upload" = "Upload";
 
 /* No comment provided by engineer. */
-"Upload Program" = "Fazer upload do programa";
+"Upload Project" = "Upload Project";
 
 /* No comment provided by engineer. */
-"Upload Selected Program" = "Fazer upload do programa seleccionado";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Upload efetuado com sucesso";
@@ -1653,9 +1659,6 @@
 
 /* No comment provided by engineer. */
 "Username must not be blank" = "O nome de usuário não pode estar em branco";
-
-/* No comment provided by engineer. */
-"v" = "v";
 
 /* No comment provided by engineer. */
 "Var/List" = "Var/List";
@@ -1691,6 +1694,9 @@
 "Wait" = "Aguardar";
 
 /* No comment provided by engineer. */
+"Wait until" = "Wait until";
+
+/* No comment provided by engineer. */
 "We" = "Qua";
 
 /* No comment provided by engineer. */
@@ -1703,7 +1709,10 @@
 "Welcome to Pocket Code" = "Bem-vindo ao Pocket Code";
 
 /* No comment provided by engineer. */
-"When program started" = "Quando o programa iniciar";
+"When project started" = "When project started";
+
+/* No comment provided by engineer. */
+"When screen is touched" = "Quando alguém toca no ecrã";
 
 /* No comment provided by engineer. */
 "When tapped" = "Quando tocado";
@@ -1713,6 +1722,9 @@
 
 /* paint */
 "Width selection" = "Selecção de largura";
+
+/* No comment provided by engineer. */
+"with" = "com";
 
 /* No comment provided by engineer. */
 "X: " = "X: ";
@@ -1733,7 +1745,7 @@
 "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "Também pode criar as suas próprias aplicações, remisturar aplicações existentes e partilhá-las com os seus amigos e outras pessoas interessantes de todo o mundo.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "Você já baixou este programa!";
+"You have already downloaded this project!" = "You have already downloaded this project!";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Seu e-mail parece ser inválido";
