--- a/src/iOS_Lang/sw.lproj/Localizable.strings
+++ b/src/iOS_Lang/sw.lproj/Localizable.strings
@@ -1,11 +1,8 @@
 /* No comment provided by engineer. */
-" and wait" = " and wait";
-
-/* No comment provided by engineer. */
 "A message with the same name already exists, try again." = "Ujumbe wenye jina sawa tayari upo, jaribu tena.";
 
 /* No comment provided by engineer. */
-"A program with the same name already exists, try again." = "Programu yenye jina sawa tayari ipo, jaribu tena.";
+"A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
 "About Catrobat" = "Kuhusu Catrobat";
@@ -26,7 +23,7 @@
 "acceleration_z" = "mchapuko_z";
 
 /* No comment provided by engineer. */
-"Add %@ to list\n%@" = "Add %@ to list\n%@";
+"Add" = "Ongeza";
 
 /* No comment provided by engineer. */
 "add comment here..." = "ongeza maoni yako hapa...";
@@ -71,6 +68,9 @@
 "and" = "na";
 
 /* No comment provided by engineer. */
+"and wait" = "na subiri";
+
+/* No comment provided by engineer. */
 "Animate Brick-Parts" = "Huisha matofali-sehemu";
 
 /* No comment provided by engineer. */
@@ -90,6 +90,9 @@
 
 /* No comment provided by engineer. */
 "at " = "katika ";
+
+/* No comment provided by engineer. */
+"at position" = "katika nafasi ya";
 
 /* paint */
 "Attributes:" = "Sifa:";
@@ -164,13 +167,13 @@
 "By registering you agree to our" = "Kwa kujisajili unakubaliana nasi katika";
 
 /* No comment provided by engineer. */
-"By switching to the section \"Explore\" you can discover more interesting programs from people all over the world." = "By switching to the section \"Explore\" you can discover more interesting programs from people all over the world.";
+"By switching to the section \"Explore\" you can discover more interesting projects from people all over the world." = "By switching to the section \"Explore\" you can discover more interesting projects from people all over the world.";
 
 /* No comment provided by engineer. */
 "Camera Roll" = "Camera Roll";
 
 /* No comment provided by engineer. */
-"Can't restart program!" = "Haiwezi kuanza upya programu!";
+"Can't restart project!" = "Can't restart project!";
 
 /* No comment provided by engineer. */
 "Cancel" = "Sitisha";
@@ -225,9 +228,6 @@
 
 /* No comment provided by engineer. */
 "Choose image" = "Chagua picha";
-
-/* No comment provided by engineer. */
-"Choose sound" = "Chagua sauti";
 
 /* No comment provided by engineer. */
 "Clear graphic effects" = "Athari ya wazi ya kielezo";
@@ -287,7 +287,7 @@
 "Copy Looks" = "Nakili miionekano";
 
 /* No comment provided by engineer. */
-"Copy program" = "Nakili programu";
+"Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
 "Create & Remix" = "Unda & Changanya";
@@ -323,7 +323,7 @@
 "Delete Condition" = "Futa sharti";
 
 /* No comment provided by engineer. */
-"Delete item from list\n%@\n at position%@" = "Delete item from list\n%@\n at position%@";
+"Delete item from list" = "Futa kipengele kutoka kwenye orodha";
 
 /* No comment provided by engineer. */
 "Delete Looks" = "Futa Muuonekano";
@@ -335,10 +335,10 @@
 "Delete Objects" = "Futa Vipengee";
 
 /* No comment provided by engineer. */
-"Delete Program" = "Futa programu";
+"Delete Project" = "Delete Project";
 
 /* No comment provided by engineer. */
-"Delete Programs" = "Futa programu";
+"Delete Projects" = "Delete Projects";
 
 /* No comment provided by engineer. */
 "Delete Script" = "Futa hati";
@@ -377,7 +377,7 @@
 "Delete this object" = "Futa kipengee hiki";
 
 /* No comment provided by engineer. */
-"Delete this program" = "Futa programu hii";
+"Delete this project" = "Delete this project";
 
 /* No comment provided by engineer. */
 "Delete this Script?" = "Futa Hati hii?";
@@ -458,10 +458,10 @@
 "Edit Object" = "Hariri kipengee";
 
 /* No comment provided by engineer. */
-"Edit Program" = "Hariri Progamu";
+"Edit Project" = "Edit Project";
 
 /* No comment provided by engineer. */
-"Edit Programs" = "Hariri Programu";
+"Edit Projects" = "Edit Projects";
 
 /* Action sheet menu title */
 "Edit Script" = "Hariri Hati";
@@ -485,6 +485,9 @@
 "Email" = "Baruapepe";
 
 /* No comment provided by engineer. */
+"Empty input!" = "Empty input!";
+
+/* No comment provided by engineer. */
 "End If" = "Mwisho kama";
 
 /* No comment provided by engineer. */
@@ -505,11 +508,11 @@
 /* Placeholder for add object-name input field */
 "Enter your object name here..." = "Ingiza jina la kipengee chako hapa...";
 
-/* Placeholder for program-description input field */
-"Enter your program description here..." = "Ingiza maelezo ya programu yako hapa...";
+/* Placeholder for project-description input field */
+"Enter your project description here..." = "Enter your project description here...";
 
-/* Placeholder for program-name input field */
-"Enter your program name here..." = "Ingiza jina la programu yako hapa...";
+/* Placeholder for project-name input field */
+"Enter your project name here..." = "Enter your project name here...";
 
 /* Placeholder for add sound-name input field */
 "Enter your sound name here..." = "Ingiza jina la sauti yako hapa...";
@@ -522,6 +525,9 @@
 
 /* No comment provided by engineer. */
 "Error" = "Dosari";
+
+/* No comment provided by engineer. */
+"Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Explore" = "Chunguza";
@@ -548,10 +554,10 @@
 "Failed to import item" = "Failed to import item";
 
 /* No comment provided by engineer. */
-"Failed to load featured programs" = "Failed to load featured programs";
+"Failed to load featured projects" = "Failed to load featured projects";
 
 /* No comment provided by engineer. */
-"Failed to load recent programs" = "Failed to load recent programs";
+"Failed to load recent projects" = "Failed to load recent projects";
 
 /* No comment provided by engineer. */
 "Failed to load sound" = "Failed to load sound";
@@ -563,7 +569,7 @@
 "false" = "sikweli";
 
 /* No comment provided by engineer. */
-"Featured Programs" = "Featured Programs";
+"Featured Projects" = "Featured Projects";
 
 /* No comment provided by engineer. */
 "Feb" = "Feb";
@@ -582,6 +588,9 @@
 
 /* No comment provided by engineer. */
 "floor" = "sakafu";
+
+/* No comment provided by engineer. */
+"Following features used in this project are not compatible with this version of Pocket Code:" = "Following features used in this project are not compatible with this version of Pocket Code:";
 
 /* No comment provided by engineer. */
 "for" = "kwa ajili ya";
@@ -627,9 +636,6 @@
 
 /* No comment provided by engineer. */
 "Go to front" = "Nenda mbele";
-
-/* No comment provided by engineer. */
-"GOOD TO SEE YOU" = "NI VIZURI KUKUONA";
 
 /* paint */
 "Green" = "Kijani";
@@ -689,16 +695,22 @@
 "Information" = "Taarifa";
 
 /* No comment provided by engineer. */
-"Insert%@into list\n%@\n at position%@" = "Insert%@into list\n%@\n at position%@";
+"Insert" = "Weka";
 
 /* paint */
 "Inserted" = "Kuingizwa";
+
+/* No comment provided by engineer. */
+"into list" = "katika orodha";
 
 /* No comment provided by engineer. */
 "Invalid input entered, try again." = "Ingizo ni batili, jaribu tena.";
 
 /* No comment provided by engineer. */
 "Invalid URL given!" = "Imepewa URL batili!";
+
+/* No comment provided by engineer. */
+"iOS." = "iOS.";
 
 /* No comment provided by engineer. */
 "is true" = "ni kweli";
@@ -865,7 +877,7 @@
 /* No comment provided by engineer. */
 "Mo" = "Mo";
 
-/* Prefix of default catrobat program object names (except background object) */
+/* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
 
 /* No comment provided by engineer. */
@@ -876,6 +888,9 @@
 
 /* No comment provided by engineer. */
 "More" = "Zaidi";
+
+/* No comment provided by engineer. */
+"More information" = "More information";
 
 /* No comment provided by engineer. */
 "Most Downloaded" = "Zilizopakuliwa zaidi";
@@ -907,8 +922,8 @@
 /* No comment provided by engineer. */
 "Move Sounds" = "Hamisha sauti";
 
-/* Name of the default catrobat program (used as filename!!) */
-"My first program" = "Programu yangu ya kwanza";
+/* Name of the default catrobat project (used as filename!!) */
+"My first project" = "My first project";
 
 /* Default title of imported photo from camera (taken by camera) */
 "My Image" = "Picha yangu";
@@ -935,7 +950,7 @@
 "New Message" = "Ujumbe mpya";
 
 /* No comment provided by engineer. */
-"New Program" = "Programu mpya";
+"New Project" = "New Project";
 
 /* No comment provided by engineer. */
 "New Text" = "Maandishi mapya";
@@ -964,9 +979,6 @@
 /* No comment provided by engineer. */
 "No Description available" = "Hakuna maelezo";
 
-/* Title of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"No imported sounds found" = "Sauti iliyoingizwa haipatikani";
-
 /* No comment provided by engineer. */
 "No input. Please enter at least %lu character(s)." = "No input. Please enter at least %lu character(s).";
 
@@ -992,7 +1004,7 @@
 "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data." = "Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data.";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this program. Please delete some of your programs" = "Hakuna eneo wazi la kumbukumbu la kutosha kupakua programu hii. Tafadhali futa baadhi ya programu zako";
+"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
 "Not enough Memory" = "Hakuna kumbukumbu ya kutosha";
@@ -1055,6 +1067,9 @@
 "Only special characters are not allowed. Please enter at least %lu other character(s)." = "Only special characters are not allowed. Please enter at least %lu other character(s).";
 
 /* No comment provided by engineer. */
+"Open" = "Fungua";
+
+/* No comment provided by engineer. */
 "or" = "au";
 
 /* No comment provided by engineer. */
@@ -1094,28 +1109,22 @@
 "Place at " = "Weka ";
 
 /* No comment provided by engineer. */
-"Play" = "Cheza";
-
-/* No comment provided by engineer. */
 "Play Phiro music\n" = "Cheza Phiro muziki\n";
 
 /* No comment provided by engineer. */
 "Please choose another name:" = "Please choose another name:";
 
-/* Description of AlertView if the user tries to import a sound but no sound has been imported using iTunes. */
-"Please connect your iPhone to your PC/Mac and use iTunes FileSharing to import sound files into the PocketCode app." = "Please connect your iPhone to your PC/Mac and use iTunes FileSharing to import sound files into the PocketCode app.";
-
 /* paint */
 "Please enter a text!" = "Tafadhali ingiza maandishi!";
 
 /* No comment provided by engineer. */
-"Please log in to report this program as inappropriate" = "Tafadhali ingia ili kuripoti programu hii kama haifai";
+"Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
 
 /* paint */
 "Please pick a tool" = "Tafadhali chukua chombo";
 
 /* No comment provided by engineer. */
-"Please select a program to upload" = "Tafadhali teua programu ili kupakia";
+"Please select a project to upload" = "Please select a project to upload";
 
 /* bluetooth */
 "Please try resetting the device and try again." = "Tafadhali jaribu kuseti upya kifaa na jaribu tena.";
@@ -1169,6 +1178,9 @@
 "position_y" = "nafasi_y";
 
 /* No comment provided by engineer. */
+"Preview" = "Ona mwoneko awali";
+
+/* No comment provided by engineer. */
 "Previous background" = "Mandharinyuma iliyopita";
 
 /* No comment provided by engineer. */
@@ -1178,37 +1190,31 @@
 "Privacy Settings" = "Privacy Settings";
 
 /* No comment provided by engineer. */
-"Problems occured while Uploading your program" = "Matatizo yametokea wakati inapakia programu yako";
-
-/* No comment provided by engineer. */
-"Program" = "Program";
-
-/* No comment provided by engineer. */
-"Program lists:" = "Program lists:";
-
-/* No comment provided by engineer. */
-"Program name" = "Jina la programu";
-
-/* No comment provided by engineer. */
-"Program Name is necessary!" = "Jina la Programu ni muhimu!";
-
-/* No comment provided by engineer. */
-"Program variables:" = "Vitofautishi vya programu:";
-
-/* No comment provided by engineer. */
-"Programs" = "Programu";
+"Problems occured while uploading your project" = "Problems occured while uploading your project";
 
 /* No comment provided by engineer. */
 "Project" = "Mradi";
+
+/* No comment provided by engineer. */
+"Project lists:" = "Project lists:";
+
+/* No comment provided by engineer. */
+"Project name" = "Project name";
+
+/* No comment provided by engineer. */
+"Project Name is necessary!" = "Project Name is necessary!";
+
+/* No comment provided by engineer. */
+"Project variables:" = "Project variables:";
+
+/* No comment provided by engineer. */
+"Projects" = "Projects";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Tukadirie";
 
 /* No comment provided by engineer. */
 "RE" = "RE";
-
-/* No comment provided by engineer. */
-"Record" = "Rekodi";
 
 /* No comment provided by engineer. */
 "Recording" = "Inarekodi";
@@ -1238,7 +1244,7 @@
 "Rename object" = "Andika tena kipengee chako";
 
 /* No comment provided by engineer. */
-"Rename Program" = "Andika upya jina la programu";
+"Rename Project" = "Rename Project";
 
 /* No comment provided by engineer. */
 "Rename sound" = "Badili jina la sauti";
@@ -1250,7 +1256,7 @@
 "Repeat until" = "Rudia hadi";
 
 /* No comment provided by engineer. */
-"Replace item in list\n%@\nat position %@ with %@" = "Replace item in list\n%@\nat position %@ with %@";
+"Replace item in list" = "Badilisha kipengele katika orodha";
 
 /* No comment provided by engineer. */
 "Report as inappropriate" = "Ripoti kama haifai";
@@ -1279,9 +1285,6 @@
 /* No comment provided by engineer. */
 "Saturday" = "Jumamosi";
 
-/* Action sheet menu title */
-"Save Screenshot to" = "Hifadhi Skrinishoti kwa";
-
 /* paint */
 "Save to CameraRoll" = "Save to CameraRoll";
 
@@ -1302,15 +1305,6 @@
 
 /* No comment provided by engineer. */
 "screen_touch_y" = "gusa_skirini_y";
-
-/* No comment provided by engineer. */
-"Screenshot" = "Skrinishoti";
-
-/* No comment provided by engineer. */
-"Screenshot saved to Camera Roll" = "Screenshot saved to Camera Roll";
-
-/* No comment provided by engineer. */
-"Screenshot saved to project" = "Skrinishoti imehifadhiwa kwenye mradi";
 
 /* No comment provided by engineer. */
 "Script" = "Hati";
@@ -1466,9 +1460,6 @@
 "steps" = "hatua";
 
 /* No comment provided by engineer. */
-"Stop" = "Komesha";
-
-/* No comment provided by engineer. */
 "Stop all sounds" = "Komesha sauti zote";
 
 /* No comment provided by engineer. */
@@ -1508,7 +1499,7 @@
 "The description contains invalid characters, try again." = "The description contains invalid characters, try again.";
 
 /* No comment provided by engineer. */
-"The featured programs cannot be loaded" = "The featured programs cannot be loaded";
+"The featured projects cannot be loaded" = "The featured projects cannot be loaded";
 
 /* No comment provided by engineer. */
 "The following item could not be imported from the Media Library:" = "The following item could not be imported from the Media Library:";
@@ -1520,10 +1511,13 @@
 "The name contains blocked characters. Please try again!" = "The name contains blocked characters. Please try again!";
 
 /* No comment provided by engineer. */
-"The recent programs cannot be loaded" = "The recent programs cannot be loaded";
+"The recent projects cannot be loaded" = "The recent projects cannot be loaded";
 
 /* No comment provided by engineer. */
-"The requested program can not be found. Please choose a different one." = "The requested program can not be found. Please choose a different one.";
+"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
+
+/* No comment provided by engineer. */
+"The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
 
 /* No comment provided by engineer. */
 "The sound item cannot be loaded" = "The sound item cannot be loaded";
@@ -1559,6 +1553,9 @@
 "to" = "kwa";
 
 /* No comment provided by engineer. */
+"to list" = "katika orodha";
+
+/* No comment provided by engineer. */
 "to X:" = "kwa x:";
 
 /* No comment provided by engineer. */
@@ -1589,7 +1586,7 @@
 "Turn right" = "Geuka kulia";
 
 /* No comment provided by engineer. */
-"Unable to load program!" = "Haiwezi kupakia programu!";
+"Unable to load project!" = "Unable to load project!";
 
 /* No comment provided by engineer. */
 "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt." = "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt.";
@@ -1625,13 +1622,22 @@
 "Unselect All" = "Usichague zote";
 
 /* No comment provided by engineer. */
+"Unsupported Brick:" = "Unsupported Brick:";
+
+/* No comment provided by engineer. */
+"Unsupported Elements" = "Unsupported Elements";
+
+/* No comment provided by engineer. */
+"Unsupported Script:" = "Unsupported Script:";
+
+/* No comment provided by engineer. */
 "Upload" = "Pakia";
 
 /* No comment provided by engineer. */
-"Upload Program" = "Pakia Programu";
+"Upload Project" = "Upload Project";
 
 /* No comment provided by engineer. */
-"Upload Selected Program" = "Pakia Programu iliyoteuliwa";
+"Upload selected project" = "Upload selected project";
 
 /* No comment provided by engineer. */
 "Upload successful" = "Kupakia kumefaulu";
@@ -1653,9 +1659,6 @@
 
 /* No comment provided by engineer. */
 "Username must not be blank" = "Username must not be blank";
-
-/* No comment provided by engineer. */
-"v" = "v";
 
 /* No comment provided by engineer. */
 "Var/List" = "Var/List";
@@ -1691,6 +1694,9 @@
 "Wait" = "Subiri";
 
 /* No comment provided by engineer. */
+"Wait until" = "Subiri hadi";
+
+/* No comment provided by engineer. */
 "We" = "We";
 
 /* No comment provided by engineer. */
@@ -1703,7 +1709,10 @@
 "Welcome to Pocket Code" = "Karibu kwenye Msimbo wa Mfukoni";
 
 /* No comment provided by engineer. */
-"When program started" = "Programu itakapoanza";
+"When project started" = "When project started";
+
+/* No comment provided by engineer. */
+"When screen is touched" = "Wakati skrini imeguswa";
 
 /* No comment provided by engineer. */
 "When tapped" = "Inapokingwa";
@@ -1713,6 +1722,9 @@
 
 /* paint */
 "Width selection" = "Width selection";
+
+/* No comment provided by engineer. */
+"with" = "na";
 
 /* No comment provided by engineer. */
 "X: " = "X: ";
@@ -1733,7 +1745,7 @@
 "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world.";
 
 /* No comment provided by engineer. */
-"You have already downloaded this program!" = "You have already downloaded this program!";
+"You have already downloaded this project!" = "You have already downloaded this project!";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Your email seems to be invalid";
